==> Sani7/STM32HAL-MCP2515/mcp2515.c <==
#include "mcp2515.h"
#include "mcp2515_consts.h"
#include <stm32f0xx_hal.h>
#define SPI_TIMEOUT 10

void MCP2515_Init(MCP2515_HandleTypeDef* hcan, SPI_HandleTypeDef* hspi, GPIO_TypeDef* cs_port, uint16_t cs_pin) {
    hcan->hspi = hspi;
    hcan->cs_port = cs_port;
    hcan->cs_pin = cs_pin;
}

void MCP2515_Set_Register(MCP2515_HandleTypeDef* hcan, uint8_t reg, uint8_t value) {
    HAL_GPIO_WritePin(hcan->cs_port, hcan->cs_pin, GPIO_PIN_RESET);
    MCP2515_SPI_transfer(hcan, INSTRUCTION_WRITE);
    MCP2515_SPI_transfer(hcan, reg);
    MCP2515_SPI_transfer(hcan, value);
    HAL_GPIO_WritePin(hcan->cs_port, hcan->cs_pin, GPIO_PIN_SET);
}

void MCP2515_Set_Registers(MCP2515_HandleTypeDef* hcan, uint8_t reg, uint8_t values[], uint8_t n) {
    HAL_GPIO_WritePin(hcan->cs_port, hcan->cs_pin, GPIO_PIN_RESET);
    MCP2515_SPI_transfer(hcan, INSTRUCTION_WRITE);
    MCP2515_SPI_transfer(hcan, reg);
    for (uint8_t i = 0; i < n; i++) {
        MCP2515_SPI_transfer(hcan, values[i]);
    }

    //  HAL_SPI_Transmit(SPI_CAN, values, n, SPI_TIMEOUT);
    HAL_GPIO_WritePin(hcan->cs_port, hcan->cs_pin, GPIO_PIN_SET);
}

void MCP2515_Modify_Register(MCP2515_HandleTypeDef* hcan, uint8_t reg, uint8_t mask, uint8_t data) {
    HAL_GPIO_WritePin(hcan->cs_port, hcan->cs_pin, GPIO_PIN_RESET);
    MCP2515_SPI_transfer(hcan, INSTRUCTION_BITMOD);
    MCP2515_SPI_transfer(hcan, reg);
    MCP2515_SPI_transfer(hcan, mask);
    MCP2515_SPI_transfer(hcan, data);
    HAL_GPIO_WritePin(hcan->cs_port, hcan->cs_pin, GPIO_PIN_SET);
}

uint8_t MCP2515_Read_Register(MCP2515_HandleTypeDef* hcan, REGISTER reg) {
    HAL_GPIO_WritePin(hcan->cs_port, hcan->cs_pin, GPIO_PIN_RESET);
    MCP2515_SPI_transfer(hcan, INSTRUCTION_READ);
    MCP2515_SPI_transfer(hcan, reg);
    uint8_t ret = MCP2515_SPI_transfer(hcan, 0x00);
    HAL_GPIO_WritePin(hcan->cs_port, hcan->cs_pin, GPIO_PIN_SET);

    return ret;
}

void MCP2515_Read_Registers(MCP2515_HandleTypeDef* hcan, REGISTER reg, uint8_t values[], uint8_t n) {
    HAL_GPIO_WritePin(hcan->cs_port, hcan->cs_pin, GPIO_PIN_RESET);
    MCP2515_SPI_transfer(hcan, INSTRUCTION_READ);
    MCP2515_SPI_transfer(hcan, reg);
    // mcp2515 has auto-increment of address-pointer
    for (uint8_t i = 0; i < n; i++) {
        values[i] = MCP2515_SPI_transfer(hcan, 0x00);
        // HAL_SPI_Receive(&hspi4, values, n, SPI_TIMEOUT);  //Todo, check if the 0x00 from above is needed
    }
    HAL_GPIO_WritePin(hcan->cs_port, hcan->cs_pin, GPIO_PIN_SET);
}

CAN_Error MCP2515_Set_Mode(MCP2515_HandleTypeDef* hcan, CANCTRL_REQOP_MODE mode) {
    unsigned long endTime = HAL_GetTick() + 10;
    uint8_t modeMatch = 0;
    while (HAL_GetTick() < endTime) {
        MCP2515_Modify_Register(hcan, MCP_CANCTRL, CANCTRL_REQOP, mode);
        uint8_t newmode = MCP2515_Read_Register(hcan, MCP_CANSTAT);
        newmode &= CANSTAT_OPMOD;

        modeMatch = newmode == mode;

        if (modeMatch) {
            break;
        }
    }

    return modeMatch ? ERROR_OK : ERROR_FAIL;
}

CAN_Error MCP2515_Set_Config_Mode(MCP2515_HandleTypeDef* hcan) {
    return MCP2515_Set_Mode(hcan, CANCTRL_REQOP_CONFIG);
}

uint8_t MCP2515_Get_Status(MCP2515_HandleTypeDef* hcan) {
    HAL_GPIO_WritePin(hcan->cs_port, hcan->cs_pin, GPIO_PIN_RESET);
    MCP2515_SPI_transfer(hcan, INSTRUCTION_READ_STATUS);
    uint8_t i = MCP2515_SPI_transfer(hcan, 0x00);
    HAL_GPIO_WritePin(hcan->cs_port, hcan->cs_pin, GPIO_PIN_SET);
    return i;
}

CAN_Error MCP2515_Set_Filter_Mask(MCP2515_HandleTypeDef* hcan, MASK mask, uint8_t ext, uint32_t ulData) {
    CAN_Error res = MCP2515_Set_Config_Mode(hcan);
    if (res != ERROR_OK) {
        return res;
    }

    uint8_t tbufdata[4];
    MCP2515_Prepare_Id(tbufdata, ext, ulData);

    REGISTER reg;
    switch (mask) {
        case MASK0:
            reg = MCP_RXM0SIDH;
            break;
        case MASK1:
            reg = MCP_RXM1SIDH;
            break;
        default:
            return ERROR_FAIL;
    }

    MCP2515_Set_Registers(hcan, reg, tbufdata, 4);

    return ERROR_OK;
}

CAN_Error MCP2515_Set_Filter(MCP2515_HandleTypeDef* hcan, RXF num, uint8_t ext, uint32_t ulData) {
    CAN_Error res = MCP2515_Set_Config_Mode(hcan);
    if (res != ERROR_OK) {
        return res;
    }

    REGISTER reg;

    switch (num) {
        case RXF0:
            reg = MCP_RXF0SIDH;
            break;
        case RXF1:
            reg = MCP_RXF1SIDH;
            break;
        case RXF2:
            reg = MCP_RXF2SIDH;
            break;
        case RXF3:
            reg = MCP_RXF3SIDH;
            break;
        case RXF4:
            reg = MCP_RXF4SIDH;
            break;
        case RXF5:
            reg = MCP_RXF5SIDH;
            break;
        default:
            return ERROR_FAIL;
    }

    uint8_t tbufdata[4];
    MCP2515_Prepare_Id(tbufdata, ext, ulData);
    MCP2515_Set_Registers(hcan, reg, tbufdata, 4);

    return ERROR_OK;
}

CAN_Error MCP2515_Reset(MCP2515_HandleTypeDef* hcan) {
    HAL_GPIO_WritePin(hcan->cs_port, hcan->cs_pin, GPIO_PIN_RESET);
    MCP2515_SPI_transfer(hcan, INSTRUCTION_RESET);
    HAL_GPIO_WritePin(hcan->cs_port, hcan->cs_pin, GPIO_PIN_SET);

    HAL_Delay(10);

    uint8_t zeros[14] = {0};

    MCP2515_Set_Registers(hcan, MCP_TXB0CTRL, zeros, 14);
    MCP2515_Set_Registers(hcan, MCP_TXB1CTRL, zeros, 14);
    MCP2515_Set_Registers(hcan, MCP_TXB2CTRL, zeros, 14);

    MCP2515_Set_Register(hcan, MCP_RXB0CTRL, 0);
    MCP2515_Set_Register(hcan, MCP_RXB1CTRL, 0);

    MCP2515_Set_Register(hcan, MCP_CANINTE, CANINTF_RX0IF | CANINTF_RX1IF | CANINTF_ERRIF | CANINTF_MERRF);

    // receives all valid messages using either Standard or Extended Identifiers that
    // meet filter criteria. RXF0 is applied for RXB0, RXF1 is applied for RXB1
    MCP2515_Modify_Register(hcan, MCP_RXB0CTRL, RXBnCTRL_RXM_MASK | RXB0CTRL_BUKT | RXB0CTRL_FILHIT_MASK,
                            RXBnCTRL_RXM_STDEXT | RXB0CTRL_BUKT | RXB0CTRL_FILHIT);
    MCP2515_Modify_Register(hcan, MCP_RXB1CTRL, RXBnCTRL_RXM_MASK | RXB1CTRL_FILHIT_MASK,
                            RXBnCTRL_RXM_STDEXT | RXB1CTRL_FILHIT);

    // clear filters and masks
    // do not filter any standard frames for RXF0 used by RXB0
    // do not filter any extended frames for RXF1 used by RXB1
    RXF filters[] = {RXF0, RXF1, RXF2, RXF3, RXF4, RXF5};
    for (uint8_t i = 0; i < 6; i++) {
        uint8_t ext = (i == 1);
        CAN_Error result = MCP2515_Set_Filter(hcan, filters[i], ext, 0);
        if (result != ERROR_OK) {
            return result;
        }
    }

    MASK masks[] = {MASK0, MASK1};
    for (int i = 0; i < 2; i++) {
        CAN_Error result = MCP2515_Set_Filter_Mask(hcan, masks[i], 1, 0);
        if (result != ERROR_OK) {
            return result;
        }
    }

    return ERROR_OK;
}

CAN_Error MCP2515_Set_Mode(MCP2515_HandleTypeDef* hcan, MCP2515_Mode_t mode) {
    switch (mode) {
        case MODE_LISTEN_ONLY:
            return MCP2515_Set_Mode(hcan, CANCTRL_REQOP_LISTENONLY);
        break;
        case MODE_LOOPBACK: 
            return MCP2515_Set_Mode(hcan, CANCTRL_REQOP_LOOPBACK);
        break;
        case MODE_SLEEP: 
            return MCP2515_Set_Mode(hcan, CANCTRL_REQOP_SLEEP);
        break;
        case MODE_NORMAL: 
            return MCP2515_Set_Mode(hcan, CANCTRL_REQOP_NORMAL);
        break;
        default: 
            return MCP2515_Set_Mode(hcan, CANCTRL_REQOP_NORMAL);
        break;
    }
}

uint8_t MCP2515_Check_Receive(MCP2515_HandleTypeDef* hcan) {
    uint8_t res = MCP2515_Get_Status(hcan);
    if (res & STAT_RXIF_MASK) {
        return 1;
    }

    return 0;
}

uint8_t MCP2515_Get_Error_Flags(MCP2515_HandleTypeDef* hcan) {
    return MCP2515_Read_Register(hcan, MCP_EFLG);
}

uint8_t MCP2515_Check_Error(MCP2515_HandleTypeDef* hcan) {
    uint8_t eflg = MCP2515_Get_Error_Flags(hcan);

    if (eflg & EFLG_ERRORMASK) {
        return 1;
    } else {
        return 0;
    }
}

void MCP2515_Clear_RXn_OVR_Flags(MCP2515_HandleTypeDef* hcan) {
    MCP2515_Modify_Register(hcan, MCP_EFLG, EFLG_RX0OVR | EFLG_RX1OVR, 0);
}

uint8_t MCP2515_Get_Interrupts(MCP2515_HandleTypeDef* hcan) {
    return MCP2515_Read_Register(hcan, MCP_CANINTF);
}

void MCP2515_Clear_Interrupts(MCP2515_HandleTypeDef* hcan) {
    MCP2515_Set_Register(hcan, MCP_CANINTF, 0);
}

uint8_t MCP2515_Get_Interrupt_Mask(MCP2515_HandleTypeDef* hcan) {
    return MCP2515_Read_Register(hcan, MCP_CANINTE);
}

void MCP2515_Clear_TX_Interrupts(MCP2515_HandleTypeDef* hcan) {
    MCP2515_Modify_Register(hcan, MCP_CANINTF, (CANINTF_TX0IF | CANINTF_TX1IF | CANINTF_TX2IF), 0);
}

void MCP2515_Clear_RXn_OVR(MCP2515_HandleTypeDef* hcan) {
    uint8_t eflg = MCP2515_Get_Error_Flags(hcan);
    if (eflg != 0) {
        MCP2515_Clear_RXn_OVR_Flags(hcan);
        MCP2515_Clear_Interrupts(hcan);
        // MCP2515_Modify_Register(hcan, MCP_CANINTF, CANINTF_ERRIF, 0);
    }
}

void MCP2515_Clear_MERR(MCP2515_HandleTypeDef* hcan) {
    // MCP2515_Modify_Register(hcan, MCP_EFLG, EFLG_RX0OVR | EFLG_RX1OVR, 0);
    // clearInterrupts();
    MCP2515_Modify_Register(hcan, MCP_CANINTF, CANINTF_MERRF, 0);
}

void MCP2515_Clear_ERRIF(MCP2515_HandleTypeDef* hcan) {
    // MCP2515_Modify_Register(hcan, MCP_EFLG, EFLG_RX0OVR | EFLG_RX1OVR, 0);
    // clearInterrupts();
    MCP2515_Modify_Register(hcan, MCP_CANINTF, CANINTF_ERRIF, 0);
}
