==> runout0/RpPicoCtrl-X/src/spi/mcp2515/mcp2515.c <==
#include <string.h> // memset()
#include "mcp2515.h"
#include "../xspi.h" // CSn_Set()

enum MCP2515_ERROR MCP2515_init(MCP2515_t *mcp2515, spi_inst_t *spi, enum spi_csn cs_pin)
{
	mcp2515->spi = spi ;
	mcp2515->cs_pin = cs_pin ;

	TXBn_REGS_t tx0, tx1, tx2;
	RXBn_REGS_t rx0, rx1;
	
	tx0.v[IDX_TXBCTRL] = MCP_TXB0CTRL;
	tx0.v[IDX_TXBSIDH] = MCP_TXB0SIDH;
	tx0.v[IDX_TXBDATA] = MCP_TXB0DATA;
	
	tx1.v[IDX_TXBCTRL] = MCP_TXB1CTRL;
	tx1.v[IDX_TXBSIDH] = MCP_TXB1SIDH;
	tx1.v[IDX_TXBDATA] = MCP_TXB1DATA;
		 
	tx2.v[IDX_TXBCTRL] = MCP_TXB2CTRL;
	tx2.v[IDX_TXBSIDH] = MCP_TXB2SIDH;
	tx2.v[IDX_TXBDATA] = MCP_TXB2DATA;
	
	memcpy(&mcp2515->TXB[TXB0], &tx0, sizeof(TXBn_REGS_t)) ;
	memcpy(&mcp2515->TXB[TXB1], &tx1, sizeof(TXBn_REGS_t)) ;
	memcpy(&mcp2515->TXB[TXB2], &tx2, sizeof(TXBn_REGS_t)) ;
	
	rx0.v[IDX_RXBCTRL] = MCP_RXB0CTRL;
	rx0.v[IDX_RXBSIDH] = MCP_RXB0SIDH;
	rx0.v[IDX_RXBDATA] = MCP_RXB0DATA;
	rx0.v[IDX_RXBIF] = CANINTF_RX0IF;

	rx1.v[IDX_RXBCTRL] = MCP_RXB1CTRL;
	rx1.v[IDX_RXBSIDH] = MCP_RXB1SIDH;
	rx1.v[IDX_RXBDATA] = MCP_RXB1DATA;
	rx1.v[IDX_RXBIF] = CANINTF_RX1IF;

	memcpy(&mcp2515->RXB[RXB0], &rx0, sizeof(RXBn_REGS_t)) ;
	memcpy(&mcp2515->RXB[RXB1], &rx1, sizeof(RXBn_REGS_t)) ;
	return ERROR_OK ;
}

enum MCP2515_ERROR MCP2515_reset(MCP2515_t *mcp2515)
{
	uint8_t result ;

	CSn_Set(mcp2515->cs_pin) ;	
	uint8_t CAN_INSTR = MCP_INSTR_RESET ;
	spi_write_blocking(mcp2515->spi, &CAN_INSTR, 1) ;
	CSn_Set(csn_disable) ;

	//Depends on oscillator & capacitors used
	sleep_ms(10) ;

	uint8_t zeros[14] ;
	memset(zeros, 0, sizeof(zeros)) ;
	MCP2515_setRegisters(mcp2515, MCP_TXB0CTRL, zeros, 14) ; // Sendepuffer 0 loeschen -> bis D7 alles reseten
	MCP2515_setRegisters(mcp2515, MCP_TXB1CTRL, zeros, 14) ; // Sendepuffer 1 loeschen -> bis D7 alles reseten
	MCP2515_setRegisters(mcp2515, MCP_TXB2CTRL, zeros, 14) ; // Sendepuffer 2 loeschen -> bis D7 alles reseten

	MCP2515_setRegister(mcp2515, MCP_RXB0CTRL, 0) ; // Empfangssteuerregister 0 loeschen
	MCP2515_setRegister(mcp2515, MCP_RXB1CTRL, 0) ; // Empfangssteuerregister 1 loeschen

	MCP2515_setRegister(mcp2515, MCP_CANINTE, CANINTF_RX0IF | CANINTF_RX1IF | CANINTF_ERRIF | CANINTF_MERRF) ; // -> 0xA3

	// receives all valid messages using either Standard or Extended Identifiers that
	// meet filter criteria. RXF0 is applied for RXB0, RXF1 is applied for RXB1
	MCP2515_modifyRegister(mcp2515, MCP_RXB0CTRL, RXBnCTRL_RXM_MASK | RXB0CTRL_BUKT | RXB0CTRL_FILHIT_MASK, RXBnCTRL_RXM_STDEXT | RXB0CTRL_BUKT | RXB0CTRL_FILHIT) ; // ->0x6704
	MCP2515_modifyRegister(mcp2515, MCP_RXB1CTRL, RXBnCTRL_RXM_MASK | RXB1CTRL_FILHIT_MASK, RXBnCTRL_RXM_STDEXT | RXB1CTRL_FILHIT) ; // ->0x6701

	// clear filters and masks
	// do not filter any standard frames for RXF0 used by RXB0
	// do not filter any extended frames for RXF1 used by RXB1
		
	// Registerzugrif auf 0x00, 0x04, 0x08, 0x10, 0x14, 0x18
	enum MCP2515_RXF filters[] = { RXF0, RXF1, RXF2, RXF3, RXF4, RXF5 } ;
	for(int i = 0 ; i < 6 ; i++)		
	{
		bool ext = (i == 1) ;
		result = MCP2515_setFilter(mcp2515, filters[i], ext, 0) ;
		if(result != ERROR_OK)
		{
			return result ;
		}
	}

	// Registerzugrif auf 0x20, 0x24
	enum MCP2515_MASK masks[] = { MASK0, MASK1 } ;
	for(int i = 0 ; i < 2 ; i++) 
	{
		result = MCP2515_setFilterMask(mcp2515, masks[i], true, 0) ;
		if(result != ERROR_OK) {
			return result ;
		}
	}  

	return ERROR_OK ;
}

uint8_t MCP2515_readRegister(MCP2515_t *mcp2515, const uint8_t reg)
{
	CSn_Set(mcp2515->cs_pin) ;
	uint8_t data[2] = { MCP_INSTR_READ, reg } ;
	spi_write_blocking(mcp2515->spi, data, 2) ;

	uint8_t ret ;
	spi_read_blocking(mcp2515->spi, 0x00, &ret, 1) ;
	CSn_Set(csn_disable) ;
	return ret ;
}

void MCP2515_readRegisters(MCP2515_t *mcp2515, const uint8_t reg, uint8_t values[], const uint8_t n)
{
	CSn_Set(mcp2515->cs_pin) ;
	uint8_t data[2] = { MCP_INSTR_READ, reg } ;
	spi_write_blocking(mcp2515->spi, data, 2) ;
	spi_read_blocking(mcp2515->spi, 0x00, values, n) ;
	CSn_Set(csn_disable) ;
}

void MCP2515_setRegister(MCP2515_t *mcp2515, const uint8_t reg, const uint8_t value)
{
	CSn_Set(mcp2515->cs_pin) ;
	uint8_t data[3] = { MCP_INSTR_WRITE, reg, value } ;
	spi_write_blocking(mcp2515->spi, data, 3) ;
	CSn_Set(csn_disable) ;
}

void MCP2515_setRegisters(MCP2515_t *mcp2515, const uint8_t reg, const uint8_t values[], const uint8_t n)
{
	CSn_Set(mcp2515->cs_pin) ;

	uint8_t data[2] = { MCP_INSTR_WRITE, reg } ;
	spi_write_blocking(mcp2515->spi, data, 2) ;
	spi_write_blocking(mcp2515->spi, values, n) ;
	CSn_Set(csn_disable) ;
}

void MCP2515_modifyRegister(MCP2515_t *mcp2515, const uint8_t reg, const uint8_t mask, const uint8_t data)
{
	CSn_Set(mcp2515->cs_pin) ;
	uint8_t d[4] = { MCP_INSTR_BITMOD, reg, mask, data } ;
	spi_write_blocking(mcp2515->spi, d, 4) ;
	CSn_Set(csn_disable) ;
}

uint8_t MCP2515_getStatus(MCP2515_t *mcp2515)
{
	CSn_Set(mcp2515->cs_pin) ;

	uint8_t CAN_INSTR = MCP_INSTR_READ_STATUS ;
	spi_write_blocking(mcp2515->spi, &CAN_INSTR, 1) ;

	uint8_t ret ;
	spi_read_blocking(mcp2515->spi, 0x00, &ret, 1) ;
	CSn_Set(csn_disable) ;
	return ret ;
}

enum MCP2515_ERROR MCP2515_setConfigMode(MCP2515_t *mcp2515)
{
	return MCP2515_setMode(mcp2515, CANCTRL_REQOP_CONFIG) ;
}

enum MCP2515_ERROR MCP2515_setMode(MCP2515_t *mcp2515, const uint8_t mode)
{
	MCP2515_modifyRegister(mcp2515, MCP_CANCTRL, CANCTRL_REQOP, mode) ; // Register 0x0F, Maske (0xE), Data (0x80)

	unsigned long endTime = to_ms_since_boot(get_absolute_time()) + 10 ;
	bool modeMatch = false ;
	while(to_ms_since_boot(get_absolute_time()) < endTime) {
  
		uint8_t newmode = MCP2515_readRegister(mcp2515, MCP_CANSTAT);
		newmode &= CANSTAT_OPMOD ;
		modeMatch = newmode == mode ;
		if(modeMatch) {
			break ;
		}
	}
	return modeMatch ? ERROR_OK : ERROR_FAIL ;
}

enum MCP2515_ERROR MCP2515_setFilterMask(MCP2515_t *mcp2515, const enum MCP2515_MASK mask, const bool ext, const uint32_t ulData)
{
	enum MCP2515_ERROR res = MCP2515_setConfigMode(mcp2515) ;
	if(res != ERROR_OK) {
	return res ;
	}
    
	uint8_t tbufdata[4] ;
	MCP2515_prepareId(tbufdata, ext, ulData) ;

	uint8_t reg ;
	switch(mask) {
		case MASK0 : reg = MCP_RXM0SIDH ; break ;
		case MASK1 : reg = MCP_RXM1SIDH ; break ;
		default :
				return ERROR_FAIL ;
	}

	MCP2515_setRegisters(mcp2515, reg, tbufdata, 4) ;  
	return ERROR_OK ;
}

enum MCP2515_ERROR MCP2515_setFilter(MCP2515_t *mcp2515, const enum MCP2515_RXF num, const bool ext, const uint32_t ulData)	
{
	enum MCP2515_ERROR res = MCP2515_setConfigMode(mcp2515) ;
	if(res != ERROR_OK) { return res ; }

	uint8_t reg ;

	switch(num) {
		case RXF0 : reg = MCP_RXF0SIDH ; break ;
		case RXF1 : reg = MCP_RXF1SIDH ; break ;
		case RXF2 : reg = MCP_RXF2SIDH ; break ;
		case RXF3 : reg = MCP_RXF3SIDH ; break ;
		case RXF4 : reg = MCP_RXF4SIDH ; break ;
		case RXF5 : reg = MCP_RXF5SIDH ; break ;
		default :
			return ERROR_FAIL ;
	}

	uint8_t tbufdata[4] ;
	MCP2515_prepareId(tbufdata, ext, ulData) ;
	MCP2515_setRegisters(mcp2515, reg, tbufdata, 4) ;

	return ERROR_OK ;
}

bool MCP2515_checkReceive(MCP2515_t *mcp2515)
{
	uint8_t res = MCP2515_getStatus(mcp2515) ;
	if(res & STAT_RXIF_MASK)
	{
		return true ;
	} else {
		return false ;
	}
}

bool MCP2515_checkError(MCP2515_t *mcp2515)
{
	uint8_t eflg = MCP2515_getErrorFlags(mcp2515) ;

	if(eflg & EFLG_ERRORMASK) {
		return true ;
	} else {
		return false ;
	}
}

uint8_t MCP2515_getErrorFlags(MCP2515_t *mcp2515)
{
	return MCP2515_readRegister(mcp2515, MCP_EFLG) ;
}

void MCP2515_clearRXnOVRFlags(MCP2515_t *mcp2515)
{
	MCP2515_modifyRegister(mcp2515, MCP_EFLG, EFLG_RX0OVR | EFLG_RX1OVR, 0) ;
}

uint8_t MCP2515_getInterrupts(MCP2515_t *mcp2515)
{
	return MCP2515_readRegister(mcp2515, MCP_CANINTF) ;
}

void MCP2515_clearInterrupts(MCP2515_t *mcp2515)
{
	MCP2515_setRegister(mcp2515, MCP_CANINTF, 0) ;
}

uint8_t MCP2515_getInterruptMask(MCP2515_t *mcp2515)
{
	return MCP2515_readRegister(mcp2515, MCP_CANINTE) ;
}

void MCP2515_clearTXInterrupts(MCP2515_t *mcp2515)
{
	MCP2515_modifyRegister(mcp2515, MCP_CANINTF, (CANINTF_TX0IF | CANINTF_TX1IF | CANINTF_TX2IF), 0) ;
}

void MCP2515_clearRXnOVR(MCP2515_t *mcp2515)
{
	uint8_t eflg = MCP2515_getErrorFlags(mcp2515) ;
	if(eflg != 0) {
	MCP2515_clearRXnOVRFlags(mcp2515) ;
	MCP2515_clearInterrupts(mcp2515) ;
//modifyRegister(MCP_CANINTF, CANINTF_ERRIF, 0);
}
	
}

void MCP2515_clearMERR(MCP2515_t *mcp2515)
{
	//modifyRegister(MCP_EFLG, EFLG_RX0OVR | EFLG_RX1OVR, 0);
	//clearInterrupts();
	MCP2515_modifyRegister(mcp2515, MCP_CANINTF, CANINTF_MERRF, 0) ;
}

void MCP2515_clearERRIF(MCP2515_t *mcp2515)
{
	//modifyRegister(MCP_EFLG, EFLG_RX0OVR | EFLG_RX1OVR, 0);
	//clearInterrupts();
	MCP2515_modifyRegister(mcp2515, MCP_CANINTF, CANINTF_ERRIF, 0) ;
}
